[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "wrfy"
version = "0.9.2"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "Simple bulk operations for Docker"
readme = "README.md"

[tool.poetry.scripts]
wrfy = 'wrfy.cli:main'

[tool.poetry.dependencies]
python = ">=3.7,<4"
docker = "^2.7.0"
progressbar2 = "^3.55.0"

[tool.poetry.dev-dependencies]
black = "*"
tox = "*"
flake8 = "*"
pytest = "*"

[tool.poetry.group.dev.dependencies]
poetryup = "^0.12.7"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
